<resources>
    <string name="app_name">pokemonApp</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    f
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Pokémon Finder</string>
    <string name="subTitle">It’s time to find your Pokémon</string>
    <string name="type">Type</string>
    <string name="BaseExp">Base Exp</string>
    <string name="abilities">Abilities</string>
    <string name="name">name</string>
    <string name="titleEvolution">Evolutions</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="aboutPoke">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper, est non ultricies sodales, sem sem lacinia felis, eget cursus diam quam eget nibh. Ut vitae turpis elit. In molestie ligula in tellus vehicula, blandit sollicitudin felis congue. Curabitur vestibulum tortor porta augue condimentum, blandit fringilla purus sagittis. Aliquam nec dolor odio. Nam sollicitudin nisi at tellus elementum facilisis. Nunc eu malesuada mi, at semper sapien.</string>
    <string name="habitat">Habitat</string>
    <string name="pokemons">Pokemons</string>
    <string name="types">Types</string>
    <string name="height">Height</string>
    <string name="moves">Moves</string>
    <string name="pokeInfo">Pokémon Info</string>
    <string name="moveInfo">Move Info</string>

</resources>