<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/bg_fragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <include
        layout="@layout/go_back_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/goBackContainer"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/bg_fragment"
                android:paddingHorizontal="@dimen/dimen_16"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/pokeImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_500" />
            </LinearLayout>
            <!--Pokemon name layout-->

            <TextView
                android:id="@+id/namePoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:textAlignment="center"
                android:textSize="@dimen/dimenString_40"
                android:textStyle="bold"
                tools:text="@string/name" />

            <!--Description-->
            <TextView
                android:id="@+id/pokeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_50"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_50"
                android:layout_marginBottom="@dimen/dimen_40"
                android:text="@string/aboutPoke"
                android:textColor="@color/black"
                android:textSize="@dimen/dimenString_15" />

            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionMainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:gravity="center"
                android:visibility="visible"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardElevation="@dimen/dimen_10">

                <GridLayout
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|top"
                    android:layout_marginVertical="@dimen/dimen_10"
                    android:columnCount="3"
                    android:orientation="horizontal"
                    android:rowCount="3">

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/type"
                        android:gravity="top"
                        />

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/abilities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/abilities"
                        android:gravity="top"
                        app:spaceHorizontal="@dimen/dimen_10"
                        />

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/weight"
                        android:gravity="top"
                        />

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/baseExp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/BaseExp"
                        android:gravity="top"
                        />

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/habitat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/habitat"
                        app:spaceHorizontal="@dimen/dimen_10"
                        android:gravity="top"
                        />

                    <com.example.pokemonapp.components.Property
                        android:id="@+id/height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:title="@string/height"
                        android:gravity="top"
                        />
                </GridLayout>
            </androidx.cardview.widget.CardView>

            <com.example.pokemonapp.components.EvolutionContainer
                android:id="@+id/evoContainer"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                app:titleText="Evolutions" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>