<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_fragment"
    tools:context=".view.fragments.HomeFragment"

    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_70"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimenString_36">

    </TextView>

    <LinearLayout
        android:id="@+id/search_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30"
        android:gravity="center"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/search"
            android:layout_width="@dimen/dimen_300"
            android:layout_height="wrap_content"
            android:queryHint="Search"
            android:inputType="text"
            android:background="@drawable/customborder"
            />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/border_rigth_top_bottom"
            android:backgroundTint="@color/blue_search"
            android:padding="@dimen/dimen_12.1"
            android:src="@drawable/ic_baseline_search_24" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/navContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_container"
        android:layout_marginTop="@dimen/dimen_40"
        android:elevation="@dimen/dimen_15"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_15"
        android:paddingBottom="@dimen/dimen_15">

        <TextView
            android:id="@+id/move"
            style="@style/navStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/moves" />

        <TextView
            android:id="@+id/pokemons"
            style="@style/navStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/pokemons" />

        <TextView
            style="@style/navStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/types" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomTitle"
        android:layout_below="@id/navContainer"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/pokemon" />

    <TextView
        android:id="@+id/bottomTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_30"
        android:text="@string/subTitle"
        android:textColor="@color/black" />

</RelativeLayout>